--- a/uebung_05/lib/uebung_5.css
+++ b/uebung_05/lib/uebung_5.css
@@ -1,120 +1,27 @@
-#mapdiv {
-    position: relative;
-    border: 1px solid black;
-    border-radius: 4px;
-    height: 600px;
-    min-height: 20px;  
-    min-width: 20px;
-    width: 50%;
-    margin: auto;
-}
-
-#bg-head {
+#bg-head, #navbar_container, .navbar {
     background-color: #2e629f; 
-}
-
-#navbar_container {
-    background-color: #2e629f; 
-}
-
-.navbar {
-    background-color: #2e629f; 
-}
-
-.header {
-    overflow: hidden;
-    background-color: #2e629f;
-    width: 50%;
-}
-
-footer {
-    width: 50%;
-}
-
-.container {
-    overflow: hidden;
-    background-color: #2e629f;
-    display: block;
-}
-
-.header a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-}
-
-.header input {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-}
-
-.header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-}
-
-.header-right {
-    float: right;
-}
-
-@media screen and (min-windth: 50px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      float: none;
-    }
 }
 
 @media only screen and (min-width: 992px) {
     #mapdiv {
-        position: relative;
-        border: 1px solid black;
-        border-radius: 4px;
-        height: 600px;
-        min-height: 20px;  
-        min-width: 20px;
         width: 50%;
+        margin: auto;
+        height: 500px;
+        overflow: hidden;
     }
-    
-    footer {
-        width: 100%;
-    }
-    #bg-head {
+    footer, #bg-head {
         width: 100%;
     }
 }
 
 @media only screen and (max-width: 991px) {
     #mapdiv {
-        position: relative;
-        border: 1px solid black;
-        border-radius: 4px;
-        height: 600px;
-        min-height: 20px;  
-        min-width: 20px;
         width: 100%;
+        height: 500px;
         margin: auto;
+        overflow: hidden;
     }
-    
-    footer {
-        width: 100%;
-    }
-
-    #bg-head {
+    footer, #bg-head {
         width: 100%;
     }
 }
